--- a/src/index.css
+++ b/src/index.css
@@ -72,4 +72,26 @@ img{
   width: 100%;
 }
 
+table{
+  width: 100%;
+  text-align: left;
+}
 
+/* tr{
+  border: 1px solid black;
+} */
+ 
+
+th{
+  background-color: #eee;
+  padding: 0.4em;
+}
+
+td{
+  padding: 0.3em 0.4em;
+}
+
+.trash{
+  color: red;
+  font-size: 18px;
+}
